{
    "name": "GenericXR_Controller",
    "maps": [
        {
            "name": "LeftController",
            "id": "c200ec8d-de93-4979-b4cd-efc14b4274c3",
            "actions": [
                {
                    "name": "Grip",
                    "type": "PassThrough",
                    "id": "5d04703e-8f12-4c39-a13a-849668d16923",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger",
                    "type": "PassThrough",
                    "id": "24e0d571-466c-409d-b193-a7cd9ee16e14",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d58b7a71-35ca-4a47-bde0-42560c9c57bb",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea4205f7-0dac-4a3b-ba7f-643f30beef4a",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightController",
            "id": "36b43b18-d044-45a1-9bc3-5828eb4b5759",
            "actions": [
                {
                    "name": "Grip",
                    "type": "PassThrough",
                    "id": "6e43b27e-e1f8-4644-81b3-b2cbbf4d5872",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger",
                    "type": "PassThrough",
                    "id": "c95683db-c74b-462d-9188-5af3c7023ccc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "71738f80-6548-4bbe-9108-fe467051f1fd",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47983901-ebf7-4e5a-b988-697c77951011",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "DefaultXR",
            "bindingGroup": "DefaultXR",
            "devices": []
        }
    ]
}